// nlu.proto - NLU classification service definitions
//
// Copyright (C) Manoj Jhawar, Intelligent Devices LLC
// Created: 2025-12-28
//
// Natural language understanding and intent classification

syntax = "proto3";

package com.augmentalis.universalrpc.nlu;

option java_package = "com.augmentalis.universalrpc.nlu";
option java_multiple_files = true;

// Intent classification result
message Intent {
    string name = 1;              // Intent name
    float confidence = 2;         // Confidence score (0-1)
    repeated Slot slots = 3;      // Extracted slots
}

// Slot/entity
message Slot {
    string name = 1;              // Slot name
    string value = 2;             // Extracted value
    string raw_value = 3;         // Original text
    float confidence = 4;
    int32 start = 5;              // Start position in text
    int32 end = 6;                // End position in text
}

// Classification request
message ClassifyRequest {
    string request_id = 1;
    string text = 2;
    string language = 3;
    ClassifyConfig config = 4;
}

// Classification configuration
message ClassifyConfig {
    string model = 1;             // Model to use
    float threshold = 2;          // Confidence threshold
    int32 max_intents = 3;        // Max intents to return
    repeated string domains = 4;  // Filter by domains
}

// Classification response
message ClassifyResponse {
    string request_id = 1;
    string text = 2;
    repeated Intent intents = 3;
    string language = 4;
    int64 processing_time_ms = 5;
}

// Entity extraction request
message ExtractEntitiesRequest {
    string request_id = 1;
    string text = 2;
    string language = 3;
    repeated string entity_types = 4;  // Filter by entity types
}

// Entity extraction response
message ExtractEntitiesResponse {
    string request_id = 1;
    repeated Entity entities = 2;
}

message Entity {
    string type = 1;              // Entity type
    string value = 2;             // Normalized value
    string raw_text = 3;          // Original text
    float confidence = 4;
    int32 start = 5;
    int32 end = 6;
    map<string, string> metadata = 7;
}

// Command parsing request
message ParseCommandRequest {
    string request_id = 1;
    string text = 2;
    string context_package = 3;   // Current app package
    string context_activity = 4;  // Current activity
}

// Parsed command
message ParsedCommand {
    string request_id = 1;
    string original_text = 2;
    string action = 3;            // Normalized action
    repeated Slot parameters = 4;
    string target_avid = 5;       // Target element if identified
    float confidence = 6;
    repeated string alternatives = 7;  // Alternative interpretations
}

// Service definition
service NLUService {
    // Classify intent
    rpc Classify(ClassifyRequest) returns (ClassifyResponse);

    // Extract entities
    rpc ExtractEntities(ExtractEntitiesRequest) returns (ExtractEntitiesResponse);

    // Parse voice command
    rpc ParseCommand(ParseCommandRequest) returns (ParsedCommand);

    // Batch classify
    rpc BatchClassify(BatchClassifyRequest) returns (BatchClassifyResponse);

    // Get available models
    rpc GetModels(GetModelsRequest) returns (ModelsResponse);
}

message BatchClassifyRequest {
    string request_id = 1;
    repeated string texts = 2;
    ClassifyConfig config = 3;
}

message BatchClassifyResponse {
    string request_id = 1;
    repeated ClassifyResponse results = 2;
}

message GetModelsRequest {
    string request_id = 1;
}

message ModelsResponse {
    repeated ModelInfo models = 1;
    string default_model = 2;
}

message ModelInfo {
    string name = 1;
    string version = 2;
    repeated string supported_languages = 3;
    repeated string domains = 4;
    bool loaded = 5;
}
