// recognition.proto - Voice recognition service definitions
//
// Copyright (C) Manoj Jhawar, Intelligent Devices LLC
// Created: 2025-12-28
//
// Replaces: VoiceRecognition AIDL interfaces

syntax = "proto3";

package com.augmentalis.universalrpc.recognition;

option java_package = "com.augmentalis.universalrpc.recognition";
option java_multiple_files = true;

// Recognition result data
message RecognitionData {
    string text = 1;              // Recognized text
    float confidence = 2;         // Confidence score (0-1)
    string language = 3;          // Detected language code
    int64 timestamp = 4;          // Recognition timestamp
    bool is_final = 5;            // Final vs partial result
}

// Recognition configuration
message RecognitionConfig {
    string language = 1;          // Target language code
    string recognizer_type = 2;   // "google", "vivoka", "whisper"
    bool continuous = 3;          // Continuous listening mode
    float silence_threshold = 4;  // Silence detection threshold
    int32 max_duration_ms = 5;    // Maximum recording duration
}

// Start recognition request
message StartRecognitionRequest {
    string request_id = 1;
    RecognitionConfig config = 2;
}

// Stop recognition request
message StopRecognitionRequest {
    string request_id = 1;
}

// Recognition response
message RecognitionResponse {
    string request_id = 1;
    bool success = 2;
    string message = 3;
}

// Recognition event (streaming)
message RecognitionEvent {
    string session_id = 1;
    oneof event {
        RecognitionData result = 2;
        RecognitionError error = 3;
        RecognitionStatus status = 4;
    }
}

message RecognitionError {
    int32 code = 1;
    string message = 2;
}

message RecognitionStatus {
    string state = 1;             // "listening", "processing", "stopped"
    float volume_level = 2;       // Current audio volume
}

// Service definition
service VoiceRecognitionService {
    // Start voice recognition
    rpc Start(StartRecognitionRequest) returns (RecognitionResponse);

    // Stop voice recognition
    rpc Stop(StopRecognitionRequest) returns (RecognitionResponse);

    // Get current recognition state
    rpc GetState(GetStateRequest) returns (RecognitionStatus);

    // Stream recognition results
    rpc StreamResults(StartRecognitionRequest) returns (stream RecognitionEvent);
}

message GetStateRequest {
    string request_id = 1;
}
